--- a/Customer Segmentation/customer_segments.ipynb
+++ b/Customer Segmentation/customer_segments.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "## Data Exploration\n",
-    "In this section, we will begin exploring the data through visualizations and code to understand how each feature is related to the others. We will observe a statistical description of the dataset, consider the relevance of each feature, and select a few sample data points from the dataset which you will track through the course of this project.\n",
+    "In this section, we will begin exploring the data through visualizations and code to understand how each feature is related to the others. We will observe a statistical description of the dataset, consider the relevance of each feature, and select a few sample data points from the dataset.\n",
     "\n",
     "Note that the dataset is composed of six important product categories: **'Fresh'**, **'Milk'**, **'Grocery'**, **'Frozen'**, **'Detergents_Paper'**, and **'Delicatessen'**. We will consider what each category represents in terms of products we could purchase."
    ]
@@ -394,7 +394,7 @@
    "metadata": {},
    "source": [
     "### Visualize Feature Distributions\n",
-    "To get a better understanding of the dataset, we can construct a scatter matrix of each of the six product features present in the data. If we found that the feature we attempted to predict above is relevant for identifying a specific customer, then the scatter matrix below may not show any correlation between that feature and the others. Alternatively, if you believe that feature is not relevant for identifying a specific customer, the scatter matrix might show a correlation between that feature and another feature in the data. "
+    "To get a better understanding of the dataset, we can construct a scatter matrix of each of the six product features present in the data. If we found that the feature we attempted to predict above is relevant for identifying a specific customer, then the scatter matrix below may not show any correlation between that feature and the others. Alternatively, if it is believed that feature is not relevant for identifying a specific customer, the scatter matrix might show a correlation between that feature and another feature in the data. "
    ]
   },
   {
@@ -440,7 +440,7 @@
    "metadata": {},
    "source": [
     "## Data Preprocessing\n",
-    "In this section, you will preprocess the data to create a better representation of customers by performing a scaling on the data and detecting (and optionally removing) outliers. Preprocessing data is often times a critical step in assuring that results you obtain from your analysis are significant and meaningful."
+    "In this section, we will preprocess the data to create a better representation of customers by performing a scaling on the data and detecting (and optionally removing) outliers. "
    ]
   },
   {
@@ -487,7 +487,7 @@
    "metadata": {},
    "source": [
     "### Observation\n",
-    "After applying a natural logarithm scaling to the data, the distribution of each feature should appear much more normal. For any pairs of features you may have identified earlier as being correlated, observe here whether that correlation is still present (and whether it is now stronger or weaker than before)."
+    "After applying a natural logarithm scaling to the data, the distribution of each feature should appear much more normal. For any pairs of features we may have identified earlier as being correlated, observe here whether that correlation is still present (and whether it is now stronger or weaker than before)."
    ]
   },
   {
@@ -1789,7 +1789,7 @@
     "\n",
     "for n in n_clusters:\n",
     "    \n",
-    "    # TODO: Apply your clustering algorithm of choice to the reduced data \n",
+    "    # TODO: Apply clustering algorithm of choice to the reduced data \n",
     "    clusterer = GaussianMixture(n_components=n).fit(reduced_data)\n",
     "\n",
     "    # TODO: Predict the cluster for each data point\n",
@@ -1819,7 +1819,7 @@
    "metadata": {},
    "source": [
     "### Cluster Visualization\n",
-    "Once we've chosen the optimal number of clusters for your clustering algorithm using the scoring metric above, we can now visualize the results by executing the code block below. Note that, for experimentation purposes, we  can adjust the number of clusters for the clustering algorithm to see various visualizations. However, the final visualization provided should correspond with the optimal number of clusters. "
+    "Once we've chosen the optimal number of clusters for our clustering algorithm using the scoring metric above, we can now visualize the results by executing the code block below. Note that, for experimentation purposes, we  can adjust the number of clusters for the clustering algorithm to see various visualizations. However, the final visualization provided should correspond with the optimal number of clusters. "
    ]
   },
   {
