--- a/Finding Donors/Finding_Donors .ipynb
+++ b/Finding Donors/Finding_Donors .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project: Finding Donors for Charity \n",
+    "# Finding Donors for Charity \n",
     "## Supervised Learning Project"
    ]
   },
