--- a/Customer Segmentation/customer_segments.ipynb
+++ b/Customer Segmentation/customer_segments.ipynb
@@ -184,7 +184,7 @@
        "75%     16933.750000   7190.250000  10655.750000   3554.250000   \n",
        "max    112151.000000  73498.000000  92780.000000  60869.000000   \n",
        "\n",
-       "       Detergents_Paper    Delicassen  \n",
+       "       Detergents_Paper    Delicatessen  \n",
        "count        440.000000    440.000000  \n",
        "mean        2881.493182   1524.870455  \n",
        "std         4767.854448   2820.105937  \n",
@@ -286,7 +286,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicassen\n",
+       "   Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicatessen\n",
        "0  18815  3610    11107    1148              2134        2963\n",
        "1  17623  4280     7305    2279               960        2616\n",
        "2  16448  6243     6360     824              2662        2005"
@@ -327,7 +327,7 @@
    "source": [
     "Looking at the total purchase of each product category above and comparing them with the medians of the distributions, we can guess that:\n",
     "\n",
-    "The first customer in the sample (Index 0), might be from a market that has a cafe. Here we see high amounts of Fresh, Grocery, Detergent_paper and Delicatessen. There is also near 50th percentile amounts of Milk which indicates there is a fair amount of this item being purchased but perhaps not on the level of a restuarant or a supermarket. The Delicatessen is higher than the other two customer samples and higher than the 50th percentile which may indicate there is a deli within the market and the cafe may provide deli items to their customers. \n",
+    "The first customer in the sample (Index 0), might be from a market that has a cafe. Here we see high amounts of Fresh, Grocery, Detergent_paper and Delicatessen. There is also near 50th percentile amounts of Milk which indicates there is a fair amount of this item being purchased but perhaps not on the level of a restaurant or a supermarket. The Delicatessen is higher than the other two customer samples and higher than the 50th percentile which may indicate there is a deli within the market and the cafe may provide deli items to their customers. \n",
     "\n",
     "The second customer in the sample (Index 1), might be from a mid-sized market. All the features are higher than the mean, but Detergents_paper is lower than the other two samples which may indicate this is not a high need for this business. Frozen foods are a high purchase item which may indicate a frozen food department. Delicatessen is also a high purchase and may indicate there is a deli within the market. \n",
     "\n",
@@ -432,7 +432,7 @@
     "\n",
     "According to the plots, the ‘Detergents_paper’ feature is correlated to other features in the dataset, and explains the high R^2 prediction score. \n",
     "\n",
-    "The distribution of all the features appears to be quite similar. The distirbutions are strongly right-skewed (positive skeweness), and most of the data points lie within the first intervals. Based on the summary statistics of the features that were calculated earlier,  it is expected the mean and medians are accounting for extreme outliers. This confirms there is a significant difference between the mean and the median of the feature distributions."
+    "The distribution of all the features appears to be quite similar. The distributions are strongly right-skewed (positive skeweness), and most of the data points lie within the first intervals. Based on the summary statistics of the features that were calculated earlier,  it is expected the mean and medians are accounting for extreme outliers. This confirms there is a significant difference between the mean and the median of the feature distributions."
    ]
   },
   {
@@ -450,7 +450,7 @@
     "### Implementation: Feature Scaling\n",
     "If the data is not normally distributed, especially if the mean and median vary significantly (indicating a large skew), it is most [often appropriate](http://econbrowser.com/archives/2014/02/use-of-logarithms-in-economics) to apply a non-linear scaling — particularly for financial data. One way to achieve this scaling is by using a [Box-Cox test](http://scipy.github.io/devdocs/generated/scipy.stats.boxcox.html), which calculates the best power transformation of the data that reduces skewness. A simpler approach which can work in most cases would be applying the natural logarithm.\n",
     "\n",
-    "Below, we will assign a copy of the data to `log_data` after applying logarithmic scaling and then assign a copy of the sample data to `log_samples` after applying logarithmic scaling. Visualing things with a nice scatterplot is helpful. \n"
+    "Below, we will assign a copy of the data to `log_data` after applying logarithmic scaling and then assign a copy of the sample data to `log_samples` after applying logarithmic scaling. Visualizing things with a nice scatterplot is helpful. \n"
    ]
   },
   {
@@ -577,11 +577,11 @@
    "metadata": {},
    "source": [
     "### Implementation: Outlier Detection\n",
-    "Detecting outliers in the data is extremely important in the data preprocessing step of any analysis. The presence of outliers can often skew results which take into consideration these data points. There are many \"rules of thumb\" for what constitutes an outlier in a dataset. Here, we will use [Tukey's Method for identfying outliers](https://www.kdnuggets.com/2017/01/3-methods-deal-outliers.html): An *outlier step* is calculated as 1.5 times the interquartile range (IQR). A data point with a feature that is beyond an outlier step outside of the IQR for that feature is considered abnormal.\n",
+    "Detecting outliers in the data is extremely important in the data preprocessing step of any analysis. The presence of outliers can often skew results which take into consideration these data points. There are many \"rules of thumb\" for what constitutes an outlier in a dataset. Here, we will use [Tukey's Method for identifying outliers](https://www.kdnuggets.com/2017/01/3-methods-deal-outliers.html): An *outlier step* is calculated as 1.5 times the interquartile range (IQR). A data point with a feature that is beyond an outlier step outside of the IQR for that feature is considered abnormal.\n",
     "\n",
     "Below, the following has been implmented:\n",
     "\n",
-    "We assigned the value of the 25th percentile for the given feature to `Q1`, the value of the 75th percentile for the given feature has been assigned to `Q3`, the calculation of an outlier step for the given feature has been assigned to `step` and data points have been removed fromt he dataset by adding indices to `outliers`. \n",
+    "We assigned the value of the 25th percentile for the given feature to `Q1`, the value of the 75th percentile for the given feature has been assigned to `Q3`, the calculation of an outlier step for the given feature has been assigned to `step` and data points have been removed from the dataset by adding indices to `outliers`. \n",
     "Lastly, outliers have been removed and stored as `good_data`"
    ]
   },
@@ -1578,7 +1578,7 @@
    "metadata": {},
    "source": [
     "### Implementation: Dimensionality Reduction\n",
-    "When using principal component analysis, one of the main goals is to reduce the dimensionality of the data — in effect, reducing the complexity of the problem. Dimensionality reduction comes at a cost: Fewer dimensions used implies less of the total variance in the data is being explained. Because of this, the *cumulative explained variance ratio* is extremely important for knowing how many dimensions are necessary for the problem. Additionally, if a signifiant amount of variance is explained by only two or three dimensions, the reduced data can be visualized afterwards.\n",
+    "When using principal component analysis, one of the main goals is to reduce the dimensionality of the data — in effect, reducing the complexity of the problem. Dimensionality reduction comes at a cost: Fewer dimensions used implies less of the total variance in the data is being explained. Because of this, the *cumulative explained variance ratio* is extremely important for knowing how many dimensions are necessary for the problem. Additionally, if a significant amount of variance is explained by only two or three dimensions, the reduced data can be visualized afterwards.\n",
     "\n",
     "Below, the following has been implemented:\n",
     " We assigned the results of fitting PCA in two dimensions with `good_data` to `pca`, applied a PCA transformation of `good_data` using `pca.transform`, and then assigned the results to `reduced_data`, then lastly an assignment of a PCA transformation of `log_samples` using `pca.transform`, and an assignment of the results to `pca_samples`."
@@ -1732,7 +1732,7 @@
    "source": [
     "## Clustering\n",
     "\n",
-    "After reviewing different algorithms for analysis, we chose Gaussian Mixture Modeling for clutering. We will then recover specific data points from the clusters to understand their significance by transforming them back into their original dimension and scale. "
+    "After reviewing different algorithms for analysis, we chose Gaussian Mixture Modeling for clustering. We will then recover specific data points from the clusters to understand their significance by transforming them back into their original dimension and scale. "
    ]
   },
   {
@@ -1746,7 +1746,7 @@
     "\n",
     "Advantages of Gaussian Mixture Model clustering:\n",
     "\n",
-    "Good for the estmation for softer clusters that does not have as clear boundaries (have overlap). \n",
+    "Good for the estimation for softer clusters that does not have as clear boundaries (have overlap). \n",
     "Does not bias the cluster sizes to have specific structures. \n",
     "Because there is a chance that some of the clusters are overlapping, I think it would be best to use the Gaussian Mixture Model for this dataset. This is because there might be some hidden patterns in the data that we may miss by assigning only one cluster to each data point. \n"
    ]
@@ -1760,7 +1760,7 @@
     "\n",
     "Here is what was accomplished in the code block below: \n",
     "\n",
-    "We were able to fit a clustering algorithm to the `reduced_data` and assign it to `clusterer`, predicted the cluster for each data point in `reduced_data` using `clusterer.predict` and assign them to `preds`,found the cluster centers using the algorithm's respective attribute and assign them to `centers`,predicted the cluster for each sample data point in `pca_samples` and assign them `sample_preds`, then finally calculated the silhouette score of `reduced_data` against `preds`."
+    "We were able to fit a clustering algorithm to the `reduced_data` and assign it to `clusterer`, predicted the cluster for each data point in `reduced_data` using `clusterer.predict` and assign them to `preds`,found the cluster centers using the algorithm's respective attribute and assign them to `centers`, predicted the cluster for each sample data point in `pca_samples` and assign them `sample_preds`, then finally calculated the silhouette score of `reduced_data` against `preds`."
    ]
   },
   {
@@ -1852,7 +1852,7 @@
     "### Implementation: Data Recovery\n",
     "Each cluster present in the visualization above has a central point. These centers (or means) are not specifically data points from the data, but rather the *averages* of all the data points predicted in the respective clusters. For the problem of creating customer segments, a cluster's center point corresponds to *the average customer of that segment*. Since the data is currently reduced in dimension and scaled by a logarithm, we can recover the representative customer spending from these data points by applying the inverse transformations.\n",
     "\n",
-    "The follwing was implemented below: \n",
+    "The following was implemented below: \n",
     "\n",
     "Applied the inverse transform to `centers` using `pca.inverse_transform` and assigned the new centers to `log_centers`, and applied the inverse function of `np.log` to `log_centers` using `np.exp` and assigned the true centers to `true_centers`.\n"
    ]
@@ -1974,7 +1974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our guesses for Sample points 0 and 1, and 2 were restaurants and supermarkets. It seems that the predictions for clusters 0 and 1 may be correct, but it is doifficult to make that judegment. In the plot above, sample 1 is near the boundary of both clusters. "
+    "Our guesses for Sample points 0 and 1, and 2 were restaurants and supermarkets. It seems that the predictions for clusters 0 and 1 may be correct, but it is difficult to make that judgment. In the plot above, sample 1 is near the boundary of both clusters. "
    ]
   },
   {
@@ -2092,3 +2092,4 @@
  "nbformat": 4,
  "nbformat_minor": 1
 }
+
