--- a/Customer Segmentation/customer_segments.ipynb
+++ b/Customer Segmentation/customer_segments.ipynb
@@ -557,7 +557,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicassen\n",
+       "      Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicatessen\n",
        "0  9.842410  8.191463  9.315331  7.045777          7.665753    7.993958\n",
        "1  9.776960  8.361708  8.896314  7.731492          6.866933    7.869402\n",
        "2  9.707959  8.739216  8.757784  6.714171          7.886833    7.603399"
