--- a/Customer Segmentation/customer_segments.ipynb
+++ b/Customer Segmentation/customer_segments.ipynb
@@ -250,7 +250,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
