--- a/Customer Segmentation/customer_segments.ipynb
+++ b/Customer Segmentation/customer_segments.ipynb
@@ -521,7 +521,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -623,7 +623,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -776,7 +776,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        Fresh       Milk    Grocery    Frozen  Detergents_Paper  Delicassen\n",
+       "        Fresh       Milk    Grocery    Frozen  Detergents_Paper  Delicatessen\n",
        "65   4.442651   9.950323  10.732651  3.583519         10.095388    7.260523\n",
        "66   2.197225   7.335634   8.911530  5.164786          8.151333    3.295837\n",
        "81   5.389072   9.163249   9.575192  5.645447          8.964184    5.049856\n",
@@ -831,7 +831,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -876,7 +876,7 @@
        "</div>"
       ],
       "text/plain": [
-       "         Fresh       Milk    Grocery    Frozen  Detergents_Paper  Delicassen\n",
+       "         Fresh       Milk    Grocery    Frozen  Detergents_Paper  Delicatessen\n",
        "86   10.039983  11.205013  10.377047  6.894670          9.906981    6.805723\n",
        "98    6.220590   4.718499   6.656727  6.796824          4.025352    4.882802\n",
        "154   6.432940   4.007333   4.919981  4.317488          1.945910    2.079442\n",
@@ -919,7 +919,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -946,7 +946,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicassen\n",
+       "        Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicatessen\n",
        "75   9.923192  7.036148  1.098612  8.390949          1.098612    6.882437\n",
        "154  6.432940  4.007333  4.919981  4.317488          1.945910    2.079442"
       ]
@@ -987,7 +987,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1086,7 +1086,7 @@
        "</div>"
       ],
       "text/plain": [
-       "         Fresh      Milk    Grocery     Frozen  Detergents_Paper  Delicassen\n",
+       "         Fresh      Milk    Grocery     Frozen  Detergents_Paper  Delicatessen\n",
        "38    8.431853  9.663261   9.723703   3.496508          8.847360    6.070738\n",
        "57    8.597297  9.203618   9.257892   3.637586          8.932213    7.156177\n",
        "65    4.442651  9.950323  10.732651   3.583519         10.095388    7.260523\n",
@@ -1135,7 +1135,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1162,7 +1162,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicassen\n",
+       "        Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicatessen\n",
        "75   9.923192  7.036148  1.098612  8.390949          1.098612    6.882437\n",
        "161  9.428190  6.291569  5.645447  6.995766          1.098612    7.711101"
       ]
@@ -1174,7 +1174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data points considered outliers for the feature 'Delicassen':\n"
+      "Data points considered outliers for the feature 'Delicatessen':\n"
      ]
     },
     {
@@ -1203,7 +1203,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1338,7 +1338,7 @@
        "</div>"
       ],
       "text/plain": [
-       "         Fresh       Milk    Grocery     Frozen  Detergents_Paper  Delicassen\n",
+       "         Fresh       Milk    Grocery     Frozen  Detergents_Paper  Delicatessen\n",
        "66    2.197225   7.335634   8.911530   5.164786          8.151333    3.295837\n",
        "109   7.248504   9.724899  10.274568   6.511745          6.728629    1.098612\n",
        "128   4.941642   9.087834   8.248791   4.955827          6.967909    1.098612\n",
@@ -1888,7 +1888,7 @@
        "      <th>Grocery</th>\n",
        "      <th>Frozen</th>\n",
        "      <th>Detergents_Paper</th>\n",
-       "      <th>Delicassen</th>\n",
+       "      <th>Delicatessen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1915,7 +1915,7 @@
        "</div>"
       ],
       "text/plain": [
-       "            Fresh    Milk  Grocery  Frozen  Detergents_Paper  Delicassen\n",
+       "            Fresh    Milk  Grocery  Frozen  Detergents_Paper  Delicatessen\n",
        "Segment 0  3552.0  7837.0  12219.0   870.0            4696.0       962.0\n",
        "Segment 1  8953.0  2114.0   2765.0  2075.0             353.0       732.0"
       ]
