--- a/Boston Housing/boston_housing.ipynb
+++ b/Boston Housing/boston_housing.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This was completed as one of the Udacity's Machine learning Nanodegree projects.\n",
     "\n",
-    "In this project, the performance and predictive power of a model that has been trained and tested on data collected from homes in suburbs of Boston, Massachusetts. A model trained on this data that is seen as a *good fit* could then be used to make certain predictions about a home's monetary value. This model may be useful for real eastate agents that need a good basis for determining the value of a home. \n",
+    "In this project, the performance and predictive power of a model that has been trained and tested on data collected from homes in suburbs of Boston, Massachusetts. A model trained on this data that is seen as a *good fit* could then be used to make certain predictions about a home's monetary value. This model may be useful for real estate agents that need a good basis for determining the value of a home. \n",
     "\n",
     "The dataset for this project originates from the [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Housing). The Boston housing data was collected in 1978 and each of the 506 entries represent aggregated data about 14 features for homes from various suburbs in Boston, Massachusetts. For the purposes of this project, the following preprocessing steps have been made to the dataset:\n",
     "- 16 data points have an `'MEDV'` value of 50.0. These data points likely contain **missing or censored values** and have been removed.\n",
@@ -136,7 +136,7 @@
    "source": [
     "\n",
     "- 'RM': An increase in the value of this feature will likely increase the value of 'MEDV' given that the increase in square footage or rooms typically increases the overall price of a home.  \n",
-    "- 'LSTAT': An increase in the value of this feature will likely decrease the value of 'MEDV'; due to those earning less money would not likely be able to afford expensives homes, and less expensive homes available in areas with higher percentages of individuals that are considered \"working poor\". \n",
+    "- 'LSTAT': An increase in the value of this feature will likely decrease the value of 'MEDV'; due to those earning less money would not likely be able to afford expensive homes, and less expensive homes available in areas with higher percentages of individuals that are considered \"working poor\". \n",
     "- 'PTRATIO': An increase in the value of this feature will likely decrease the value of 'MEDV', due to a higher student to teacher ratio is more often associated with schools that lack resources essential for a better learning environment.\n",
     "\n",
     "In order to test our initial intuition, the scatterplots below will give more insight. "
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scatter plots above confirm the initial intuition about the the relationship between features. "
+    "The scatter plots above confirm the initial intuition about the relationship between features. "
    ]
   },
   {
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model has succesfully captured the variation of the target variable with a coefficient of determination, (R2), of 0.923, or 92.3%. The best outcome is a score of 1, and the least favorable is a score of zero, so this outcome is very \n",
+    "This model has successfully captured the variation of the target variable with a coefficient of determination, (R2), of 0.923, or 92.3%. The best outcome is a score of 1, and the least favorable is a score of zero, so this outcome is very \n",
     "favorable. "
    ]
   },
@@ -302,7 +302,7 @@
    "metadata": {},
    "source": [
     "#### Shuffle and Split Data\n",
-    "Next, the Boston housing dataset will be plit the data into training and testing subsets. Typically, the data is also shuffled into a random order when creating the training and testing subsets to remove any bias in the ordering of the dataset."
+    "Next, the Boston housing dataset will be split into training and testing subsets. Typically, the data is also shuffled into a random order when creating the training and testing subsets to remove any bias in the ordering of the dataset."
    ]
   },
   {
@@ -405,7 +405,7 @@
     "\n",
     "The score of the training curve decreases with the increase of training points. With fewer training points the model can better predict or approximate the targets, but as the number of training points increases, fitting the targets becomes more difficult for the model and thus the score decreases.\n",
     "\n",
-    "The score of the testing curve increases with the addition of training points, but there appears to be a slight deacrease in the data after adding 250 points. As the model receives more training points, the model will perform better in prediciting training points. \n",
+    "The score of the testing curve increases with the addition of training points, but there appears to be a slight decrease in the data after adding 250 points. As the model receives more training points, the model will perform better in predicting training points. \n",
     "The training and testing curve seem to be converging to a score of 0.7 or 0.8. The model at that point is stabilizing, and adding more points may not benefit the model any further. \n",
     "In conclusion, adding more training points may not benefit the model (with max_depth of 3)."
    ]
@@ -465,7 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model with a max depth of 3 is the model that best generealizes unseen data. At this depth, the training and testing scores remain relatively high and converging at a point as the model learns and generalizes. A lower depth model underfits the data, while a model with a higher depth of 3, overfits. "
+    "The model with a max depth of 3 is the model that best generalizes unseen data. At this depth, the training and testing scores remain relatively high and converging at a point as the model learns and generalizes. A lower depth model underfits the data, while a model with a higher depth of 3, overfits. "
    ]
   },
   {
@@ -489,8 +489,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grid searching technique scans the data to determine the best or optimal paramenters for a machine learning model. This takes out additonal time for guess-work on what values are best. \n",
-    "To optimize a learning algorithm,grid search can be applied by specifying the parameters and the possible values of the parameters. The grid search then returns the best parameter values for the model, after fitting the supplied data. "
+    "Grid searching technique scans the data to determine the best or optimal parameters for a machine learning model. This takes out additional time for guess-work on what values are best. \n",
+    "To optimize a learning algorithm, grid search can be applied by specifying the parameters and the possible values of the parameters. The grid search then returns the best parameter values for the model, after fitting the supplied data. "
    ]
   },
   {
@@ -504,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The k-fold cross-validation training technique splits the dataset into k partitions of equal size, and then runs k separate learning experiments on the training data. In each of the experiments,a training set is chosen of the size of k-1 partitions, train the model on that partition, and evaluate the results on the remaining test data. The results/scores for the k experiments are then averaged. "
+    "The k-fold cross-validation training technique splits the dataset into k partitions of equal size, and then runs k separate learning experiments on the training data. In each of the experiments, a training set is chosen of the size of k-1 partitions, train the model on that partition, and evaluate the results on the remaining test data. The results/scores for the k experiments are then averaged. "
    ]
   },
   {
@@ -512,7 +512,7 @@
    "metadata": {},
    "source": [
     "#### Fitting a Model\n",
-    "Everything will be brought together and trained the modeol trained via a supervised learning technqiue called **decision tree algorithm**. To ensure that we are producing an optimized model, we will train the model using the grid search technique to optimize the 'max_depth' parameter for the decision tree. The 'max_depth' parameter can be thought of as how many questions the decision tree algorithm is allowed to ask about the data before making a prediction. "
+    "Everything will be brought together and trained the model trained via a supervised learning technique called **decision tree algorithm**. To ensure that we are producing an optimized model, we will train the model using the grid search technique to optimize the 'max_depth' parameter for the decision tree. The 'max_depth' parameter can be thought of as how many questions the decision tree algorithm is allowed to ask about the data before making a prediction. "
    ]
   },
   {
@@ -643,7 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the features related to each home, the prices seem to correlate wiht the data. Homes that are larger, in areas that have lower rates of poverty, and are near better public schools are indeed more expensive. Homes that are smaller, in areas that have higher rates of poverty and near less desirable public schools are less expensive. "
+    "Given the features related to each home, the prices seem to correlate with the data. Homes that are larger, in areas that have lower rates of poverty, and are near better public schools are indeed more expensive. Homes that are smaller, in areas that have higher rates of poverty and near less desirable public schools are less expensive. "
    ]
   },
   {
@@ -687,10 +687,10 @@
    "metadata": {},
    "source": [
     "- The data that was collected in 1978 is still applicable today in 2018, depending greatly upon the city and what features a home-owner is seeking. It is still an unfortunate reality that the better-funded public schools tend to be located in areas that consist of more expensive homes and have a lower poverty rate. \n",
-    "- The features in the data are not enough to describe a home. Other factors such as: the presence of applicances, current condition of the home, square footage and extras amentities should factor in as well. \n",
-    "- The model is not robust enought to make consistent predicitions due to features that are missing that may help a homebuyer in better choosing a place that they are looking to live. \n",
+    "- The features in the data are not enough to describe a home. Other factors such as: the presence of appliances, current condition of the home, square footage and extra amenities should factor in as well. \n",
+    "- The model is not robust enough to make consistent predictions due to features that are missing that may help a homebuyer in better choosing a place that they are looking to live. \n",
     "- Data that has been collected in a large city will likely not be applicable in a rural city due to potential homebuyer may be looking for different amenities or aspects in a home. \n",
-    "- It is or is not fair depending on what the poetential homebuyer's values. If there is high-crime and poverty that exists in a neighborhood, it is well within the homebuyer's perogative to look elsewhere. "
+    "- It is or is not fair depending on what the potential homebuyer's values. If there is high-crime and poverty that exists in a neighborhood, it is well within the homebuyer's prerogative to look elsewhere. "
    ]
   }
  ],
